syntax = "proto3";
package gingersnap.config.cache.v1alpha1;
// TODO: use the k8s type for quantity. Check the Java side
// import "apimachinery/pkg/api/resource/quantity.proto";

option java_multiple_files = true;
option java_package = "io.gingersnapproject.proto.api.config.v1alpha1";

  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes a caching rule behaviours
  message EagerCacheRuleSpec {
    // Reference to the related Cache CR
    NamespacedObjectReference  cache_ref = 1;
    // Name of the table from where the data will be produced. Format could change depending
    // on the DB: table or schema.table must be at least supported
    string table_name = 2;
    // Format of the key for the get(key) operation
    EagerCacheKey key = 3;
    // Query columns used to build the entry value
    Value value = 4;
    // Rule Query configuration
    QuerySpec query = 5;
  }

  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes all Query related configuration
  message QuerySpec {
    // Whether a Rule can be queried or not
    bool enabled = 1;
  }
  
  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes a caching rule behaviours
  message LazyCacheRuleSpec {
    // Reference to the related Cache CR
    NamespacedObjectReference cache_ref = 1;
    // The select query needed to fetch values from the DB
    string query = 2;
    // Format of the key for the get(key) operation
    LazyCacheKey key = 3;
  }

  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes how the key is build from the query result row
  message LazyCacheKey {
    // +kubebuilder:validation:Enum=TEXT;JSON
    // Format of the key for the get(key) operation
    KeyFormat format = 1;
    // Separator character in case of plain test key format
    string key_separator = 2;
  }

  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes how the key is build from the query result row
  message EagerCacheKey {
    // +kubebuilder:validation:Enum=TEXT;JSON
    // Format of the key for the get(key) operation
    KeyFormat format = 1;
    // Separator character in case of plain test key format
    string key_separator = 2;
    // Table columns composing the primary key
    repeated string key_columns = 3;
  }


  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // +kubebuilder:validation:Type=string
  // Supported format for the key of the cache entry
  enum KeyFormat {
    TEXT = 0;
    JSON = 1;
  }

  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  // Describes how the entry value is build from the query result row
  message Value {
    // Table columns that will be fetched from the DB (select clause)
    repeated string value_columns = 1;
  }
  
  // A namespaced reference to a resource
  // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
  message NamespacedObjectReference {
    // Resource name
    string name = 1;
    // Resource namespace
    string namespace = 2;
  }
